--- a/mgr/refs.bib
+++ b/mgr/refs.bib
@@ -142,6 +142,50 @@
   copyright = {arXiv.org perpetual, non-exclusive license}
 }
 
+@misc{bloom,
+  doi = {10.48550/ARXIV.2211.05100},
+  
+  url = {https://arxiv.org/abs/2211.05100},
+  
+  author = {Workshop, BigScience et al},
+  
+  keywords = {Computation and Language (cs.CL), FOS: Computer and information sciences, FOS: Computer and information sciences},
+  
+  title = {BLOOM: A 176B-Parameter Open-Access Multilingual Language Model},
+  
+  publisher = {arXiv},
+  
+  year = 2022,
+  
+  copyright = {Creative Commons Attribution 4.0 International}
+}
+
+@misc{instruct_gpt,
+  doi = {10.48550/ARXIV.2203.02155},
+  
+  url = {https://arxiv.org/abs/2203.02155},
+  
+  author = {Ouyang, Long and Wu, Jeff and Jiang, Xu and Almeida, Diogo and Wainwright, Carroll L. and Mishkin, Pamela and Zhang, Chong and Agarwal, Sandhini and Slama, Katarina and Ray, Alex and Schulman, John and Hilton, Jacob and Kelton, Fraser and Miller, Luke and Simens, Maddie and Askell, Amanda and Welinder, Peter and Christiano, Paul and Leike, Jan and Lowe, Ryan},
+  
+  keywords = {Computation and Language (cs.CL), Artificial Intelligence (cs.AI), Machine Learning (cs.LG), FOS: Computer and information sciences, FOS: Computer and information sciences},
+  
+  title = {Training language models to follow instructions with human feedback},
+  
+  publisher = {arXiv},
+  
+  year = {2022},
+  
+  copyright = {arXiv.org perpetual, non-exclusive license}
+}
+
+
+@misc{gpt-j,
+  author = {Wang, Ben and Komatsuzaki, Aran},
+  title = {{GPT-J-6B: A 6 Billion Parameter Autoregressive Language Model}},
+  howpublished = {\url{https://github.com/kingoflolz/mesh-transformer-jax}},
+  year = 2021,
+  month = May
+}
 
 @misc{zsl_good_bad,
 Author = {Yongqin Xian and Bernt Schiele and Zeynep Akata},
@@ -189,9 +233,9 @@ Eprint = {arXiv:1703.04394},
   
 	publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
   
-	volume = {38},
+	volume = 38,
   
-	number = {7},
+	number = 7,
   
 	pages = {1425--1438},
   
@@ -201,6 +245,8 @@ Eprint = {arXiv:1703.04394},
   
 	journal = {{IEEE} Transactions on Pattern Analysis and Machine Intelligence}
 }
+
+
 
 @article{gpl,
   author    = {Kexin Wang and
@@ -287,8 +333,9 @@ Title = {Low distortion delaunay embedding of trees in hyperbolic plane}
 @misc{tradeoffs,
 Author = {Christopher De Sa and Albert Gu and Christopher Ré and Frederic Sala},
 Title = {Representation Tradeoffs for Hyperbolic Embeddings},
-Year = {2018},
+Year = 2018,
 Eprint = {arXiv:1804.03329}
+}
 
 @book{manning2008introduction,
   abstract = {Class-tested and coherent, this textbook teaches classical and web information retrieval, including web search and the related areas of text classification and text clustering from basic concepts. It gives an up-to-date treatment of all aspects of the design and implementation of systems for gathering, indexing, and searching documents; methods for evaluating systems; and an introduction to the use of machine learning methods on text collections. All the important ideas are explained using examples and figures, making it perfect for introductory courses in information retrieval for advanced undergraduates and graduate students in computer science. Based on feedback from extensive classroom experience, the book has been carefully structured in order to make teaching more natural and effective.},
@@ -445,7 +492,7 @@ Eprint = {arXiv:1804.03329}
   year={2019},
 }
 
-@article{
+@misc{
 prone,
 title={ProNE: Fast and Scalable Network Representation Learning},
 author={Jie Zhang, Yuxiao Dong, Yan Wang, Jie Tang and Ming Ding},
